--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.projectlombok:lombok:1.18.22'           // 자동코드생성을 위한 Lombok 추가 : Getter, Seeter, ToString 등 자동생성
+    implementation 'javax.validation:validation-api:2.0.1.Final' // 객체 속성에 대한 유효성 검사를 위한 javax.validation 라이브러리 추가 :@NotNull, @Size, @Min 등 사용을 위해
+    implementation 'org.springframework:spring-context:6.0.5' // SpringFramework의 여러 모듈중 가장 기본적이고 핵심 모듈인 CoreContainer 모듈과 Context모듈 의존성 추가를 위해
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
